1.4.0
[in progress]
* every_day_irb is now a module that extends self
* specs for most of every_day_irb's functionality
* add helper method for paging output with hirb: page
* version bumps, including wirb and fancy_irb
* remove sketches dependency, it's a great gem, but very similar to interactive_editor

1.3.0 == 1.2.3
* add modern debundle note
* remove loading of .railsrc
* remove dbg method
* version bumps

1.2.2
* fix errors when inspect returns nil (e.g. CarrierWave uploaders)
* create legacy branch for 1.8.7 support

1.2.1
* fix newboson loader issue
* minor version bumps

1.2.0
* version bumps: hirb, awesome_print, coderay, g, methodfinder, method_source
* remove RVM helpers: Sorry, were too buggy...
* fix/improve 'cd' helper method
* improve readme
* move looksee gem to irbtools-more
* more little tweaks

1.1.1
* fix the Ripl.after_rc bug

1.1.0
* fix hirb loading/unicode issue + colorize tables (thanks to halan)
* colorize paged wirb output
* include method locator gem (improved ancestors)
* include looksee gem (aliased as Object#l/Object#ll and Object#edit)
* include method source gem (Object#src)
* small tweaks...

1.0.6
* add possibility to modify library callbacks without removing the library by using: replace_library_callback or add_library_callback
* fix hirb dependency issue
* readme improvements

1.0.5
* use paint gem for terminal colors

1.0.4
* improve error-handling
* fix broken loading of boson + interactive_editor

1.0.3
* fix post-install banner typo

1.0.2
* version bumps for zucker (rbx compatible) and wirb (improved generic object-description highlighting)

1.0.1
* add missing require 'rbconfig'

1.0.0
* gemify general helpers/rvm stuff ("every_day_irb", "rvm_loader")
* 6 different loading schemas: start, thread, autoload, sub_session, late, late_thread
  * load almost every feature via threads
* don't use zucker/alias_for, autload zucker/env (except zucker/os) for performance reasons